# Babysteps

./: .gitignore  CLAUDE.md  CODE_MAP.md  README.md  RUNBOOK.md  goal.md  milestones.md  pyproject.toml  redesign_failure_paradigm.md  technical_def.md  update.md
babysteps/: CLAUDE.md  __init__.py  demo.py  episode.py  eval.py  execution.py  failure.py  policies.py  revision.py  schemas.py  viz.py
datasets/: CLAUDE.md
docs/: CLAUDE.md  cold_start_handover_archive.md  milestone1_locked_claim.md  related_work_and_baselines.md
renders/: CLAUDE.md
scripts/: CLAUDE.md  _diag_tf_axis_census.py  _diag_tf_poke5.py  _diag_tf_regrasp.py  _make_comparison_videos.py  render_baseline_contrast.py  render_stage0_maniskill.py  render_stage0_topdown.py  render_stage5_p1_iconic.py  report_stage5_pushcube_heldout.py  run_baselines.py  serve_gallery.py  smoke_official_demo_replay.py  smoke_pushcube.py  stage0_collect.py  stage0_summarize.py  stage4_collect_varied.py  stage4_m25_train_attribution.py  stage4_m2a_a2_eval.py  stage4_m2a_g1_cert.py  stage4_m2a_run_eval.py  stage4_m2a_train_pack.py  stage4_probe_schema_recoverability.py  stage5_attribution_ablation.py  stage5_build_demo_execution_gallery.py  stage5_cache_dinov2.py  stage5_cache_vjepa.py  stage5_extract_cube_positions.py  stage5_extract_object_patch_tokens.py  stage5_goal_state_probe.py  stage5_goalstate_loop_eval.py  stage5_latent_decode_check.py  stage5_loto_ci_report.py  stage5_m3_baselines_eval.py  stage5_natural_loop_eval.py  stage5_object_relation_probe.py  stage5_p1_g1_cert.py  stage5_p1_run_eval.py  stage5_p1_train_pack.py  stage5_p2_regenerate_reports.py  (+21 more)
slurm/: CLAUDE.md  collect_stage4_varied.sbatch  crossview_gpu.sbatch  expand_n200_object_relation.sbatch  extract_cube_positions.sbatch  extract_object_patch_tokens.sbatch  render_baselines_verify.sbatch  render_official_demo_verify.sbatch  render_pickcube.sbatch  render_pushcube.sbatch  render_pushcube_clutter.sbatch  render_pushcube_natural.sbatch  render_stackcube.sbatch  render_stackcube_topdown.sbatch  render_stage5_p1_iconic.sbatch  render_turnfaucet.sbatch  run_baselines.sbatch  smoke_official_demo_replay.sbatch  stage4_m25_attribution_pushcube.sbatch  stage4_m25_attribution_stackcube.sbatch  stage4_m2a_a3_pushcube.sbatch  stage4_m2a_a3_stackcube.sbatch  stage5_b2_collect_tuples.sbatch  stage5_b2_eval_latent.sbatch  stage5_b2_render_4way_pack.sbatch  stage5_b2_smoke_4way_render.sbatch  stage5_diag_pushcube_orient.sbatch  stage5_diag_pushcube_seed_geometry.sbatch  stage5_diag_pushcube_ypush.sbatch  stage5_diag_ypush_orient.sbatch  stage5_dinov3_encoder_swap.sbatch  stage5_fv_eval.sbatch  stage5_fv_render_eval_demos.sbatch  stage5_fv_vjepa_pack.sbatch  stage5_goal_state_camera.sbatch  stage5_goal_state_clip_pool.sbatch  stage5_goal_state_clip_probe.sbatch  stage5_goal_state_probe.sbatch  stage5_goal_state_retract.sbatch  stage5_goal_state_retract_n300.sbatch  (+36 more)
tests/: CLAUDE.md  conftest.py  test_crossview.py  test_demo.py  test_episode.py  test_eval.py  (+64 more)
(+432 files in other folders)
