[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "babysteps"
version = "0.0.1"
description = "BABYSTEPS Stage 0 data preparation for PushCube blocked-approach."
requires-python = ">=3.10"
dependencies = [
    "numpy<2",
    "gymnasium",
    "pyyaml",
]

[project.optional-dependencies]
sim = ["mani_skill"]
dev = ["pytest"]
analysis = ["scikit-learn"]
# Stage-5 P2 — InternVL3.5-8B VLM attribution. torchvision is required by
# the load_image dynamic-tile preprocessor copied from the InternVL3.5
# model card. flash-attn is optional (faster inference if available).
# transformers v5+ removed `all_tied_weights_keys` which InternVL3.5's
# trust_remote_code modeling file requires. Pin to v4.x until upstream
# updates the model card (tracked by InternVL3.5-8B HF discussions).
vlm = ["transformers>=4.52.1,<5", "torch", "torchvision", "pillow",
       "einops", "timm"]

[tool.setuptools.packages.find]
where = ["."]
include = ["babysteps*"]
exclude = ["tests*", "scripts*", "docs*", "datasets*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
]
